about, contact and footer ejs files added

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <div class="container mt-2">
-  <h1>Home</h1>
-  <p><%= homeStartingContent %></p>
+  <h1>Contact us</h1>
+  <p><%= contactStartingContent %></p>
 </div>
 
 <%- include('partials/footer') -%>
