--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <div class="container mt-2">
-  <h1>Home</h1>
-  <p><%= homeStartingContent %></p>
+  <h1>About us</h1>
+  <p><%= aboutStartingContent %></p>
 </div>
 
 <%- include('partials/footer') -%>
