--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
 }
+
+.post-content{
+    display: flex;
+    align-items: center; /* Align items vertically */
+}
