--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') -%>
+<button class="btn btn-primary mt-2" onclick="location.href='/compose'">Compose</button>
 <div class="container mt-2">
   <h1>Home</h1>
   <p><%= homeStartingContent %></p>
